feat: implemented deaths api
